--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nanoid": "^3.1.30"
+    "mysql2": "^2.3.2",
+    "nanoid": "^3.1.30",
+    "sequelize": "^6.8.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "sequelize-cli": "^6.2.0"
   }
 }
